--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "simple-img-vue",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "/dist/index.js",
   "author": "mengdaoshizhongxinyang",
   "license": "MIT",
   "private": false,
   "dependencies": {
     "vue": "^2.6.11"
+  },
+  "scripts": {
+    "dev": "webpack-dev-server --open",
+    "build": "webpack --config webpack.build.conf.js"
   },
   "browserslist": [
     "> 1%",
@@ -14,16 +18,25 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "@babel/core": "^7.10.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "less": "^3.11.3",
     "less-loader": "^6.1.0",
     "vue-loader": "^15.9.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpackbar": "^4.0.0"
   }
 }
